<resources>
    <string name="app_name">Pulse</string>
    <string name="overflow_icon_desc">More</string>

    <string name="action_songs">Songs</string>
    <string name="action_albums">Albums</string>
    <string name="action_search">Search</string>
    <string name="action_playlists">Playlists</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <!-- Menu / Dialog Titles -->
    <string name="song_options_title">Song Options</string>
    <string name="dialog_song_options_details_title">Song Details</string>
    <string name="dialog_song_options_delete_title">Delete from Device</string>
    <string name="title_album_details">Album Details</string> <!-- For future use. -->

    <string name="horizontal_elipsis">⋯</string>
    <string name="album_thumbnail_desc">Album thumbnail</string>

    <!-- File Metadata Labels -->
    <string name="label_file_name">File Name</string>
    <string name="label_file_path">File Path</string>
    <string name="label_file_size">File Size</string>
    <string name="label_file_channels">File Channels</string>
    <string name="label_file_bitrate">File Bitrate</string>
    <string name="label_file_bitrate_type">File Bitrate Type</string>
    <string name="label_file_format">File Format</string>
    <string name="label_file_format_algorithm">File Format Algorithm</string>
    <string name="label_file_sample_rate">File Sample Rate</string>
    <string name="label_file_length">File Length</string>
    <string name="label_file_samples">File Samples</string>
    <string name="label_file_encoder">File Encoder</string>

    <!-- Detail Dialog Headers -->
    <string name="general_file_details">File Metadata:</string>
    <string name="advanced_file_details">Song Metadata:</string>

    <!-- Song Metadata Labels -->
    <string name="label_song_title">Song Title</string>
    <string name="label_song_artist">Song Artist</string>
    <string name="label_song_composer">Song Composer(s)</string>
    <string name="label_song_album">Song Album</string>
    <string name="label_song_year">Song Year</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Preferences -->
    <!-- Preference Headers -->
    <string name="preferences_category_audio_header_title">Audio Settings</string>
    <string name="preferences_category_appearance_title">Appearance</string>
    <!-- Preference Titles -->
    <!-- Audio -->
    <string name="equalizer_key">equalizer</string>
    <string name="equalizer_title">Equalizer</string>
    <string name="equalizer_desc">Opens the native Android equalizer. Still a work in progress.</string>
    <string name="gapless_playback_key">gapless_playback</string>
    <string name="gapless_playback_title">Gapless Playback</string>
    <string name="gapless_playback_desc">Enable continuous music playback. May cause issues on certain devices.</string>
    <!-- Appearance -->
    <string name="appearance_theme_key">appearance_theme</string>
    <string name="appearance_theme_dialog_message">Please select an app theme. The default theme is Light.</string>
    <string name="appearance_theme_title">Theme</string>
    <string name="appearance_theme_desc">Change the app\'s current display theme.</string>

    <!-- Services -->
    <!-- Media Playback Service -->
    <string name="service_media_playback_label">Media Playback Service</string>
    <string name="service_media_playback_desc">Manages and controls Pulse\'s media playback.</string>
    <string name="song_details_dialog_info_icon_desc">Informational icon</string>
    <string name="menu_action_playlist_add">Add Playlist</string>
</resources>
