<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:iconSpaceReserved="false"
        app:title="@string/preferences_category_appearance_title">

        <ListPreference
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false"
            app:title="@string/appearance_theme_title"
            app:key="@string/appearance_theme_key"
            app:summary="@string/appearance_theme_desc"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values" />

    </PreferenceCategory>

    <PreferenceCategory app:iconSpaceReserved="false"
        app:title="@string/preferences_category_audio_header_title">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="@string/gapless_playback_key"
            app:summary="@string/gapless_playback_desc"
            app:title="@string/gapless_playback_title" />

    </PreferenceCategory>

</PreferenceScreen>
